[package]
version = "0.1.0"
name = "vineflower-rs"
description = "Rust bindings for vineflower"
authors = ["IThundxr"]
repository = "https://github.com/IThundxr/vineflower-rs"
license = "LGPL-3.0-only"
keywords = ["vineflower", "java", "bindings"]
categories = ["api-bindings"]
edition = "2024"

[package.metadata.dependency]
mavenUrl = "https://repo.maven.apache.org/maven2"
groupId = "org.vineflower"
artifactId = "vineflower"
version = "1.11.2"

[profile.release]
opt-level = "s"
lto = "fat"
strip = "symbols"
codegen-units = 1

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
once_cell = "1.21.3"

[build-dependencies]
cargo_metadata = "0.23.1"
reqwest = { version = "0.13.1", features = ["blocking"] }
